Feat: Add sorting, export/import, and refine UI

--- a/index.html
+++ b/index.html
@@ -56,14 +56,14 @@
       <div id="viewer-view" class="hidden">
         <div class="viewer-header">
           <h1 id="view-title"></h1>
-          <div class="viewer-actions">
-            <button id="btn-edit">Edit</button>
-            <button id="btn-delete" class="btn-danger">Delete</button>
-          </div>
         </div>
         <div class="viewer-meta">
           <span id="view-date"></span>
           <span id="view-model"></span>
+          <div class="viewer-actions">
+            <button id="btn-edit" class="btn-sm">Edit</button>
+            <button id="btn-delete" class="btn-sm btn-danger">Delete</button>
+          </div>
           <div id="view-tags"></div>
         </div>
         <div id="view-content" class="markdown-body"></div>
