--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <div class="data-actions">
           <button id="btn-export" class="btn-sm">Export</button>
           <button id="btn-import" class="btn-sm">Import</button>
+          <button id="btn-manage-models" class="btn-sm">Models</button>
           <input type="file" id="file-import" accept=".json" class="hidden" />
         </div>
       </div>
@@ -47,12 +48,9 @@
           </div>
         </div>
         <div class="editor-meta">
-          <div class="model-select-container">
-            <select id="edit-model">
-              <option value="" disabled selected>Select Model</option>
-            </select>
-            <button id="btn-manage-models" title="Manage Models">⚙️</button>
-          </div>
+          <select id="edit-model">
+            <option value="" disabled selected>Select Model</option>
+          </select>
           <input type="text" id="edit-tags" placeholder="Tags (comma separated)" />
         </div>
         <textarea id="edit-content" placeholder="Paste conversation here... (Markdown supported)"></textarea>
@@ -73,35 +71,34 @@
         </div>
         <div id="view-content" class="markdown-body"></div>
       </div>
+
+      <div id="models-view" class="hidden">
+        <div class="viewer-header">
+          <h1>Manage Models</h1>
+        </div>
+        <div class="add-model-container">
+          <input type="text" id="new-model-input" placeholder="New Model Name" />
+          <button id="btn-add-model" class="btn-primary">Add</button>
+        </div>
+        <ul id="model-list">
+          <!-- Model items injected here -->
+        </ul>
+      </div>
     </main>
 
     <!-- Delete Confirmation Modal -->
     <div id="delete-modal" class="modal hidden">
       <div class="modal-content">
-        <h2>Delete Log</h2>
-        <p>Are you sure you want to delete this log? This action cannot be undone.</p>
+        <h2 id="modal-title">Delete Log</h2>
+        <p id="modal-message">Are you sure you want to delete this log? This action cannot be undone.</p>
         <div class="modal-actions">
           <button id="btn-modal-cancel">Cancel</button>
           <button id="btn-modal-confirm" class="btn-danger">Delete</button>
         </div>
-        <!-- Manage Models Modal -->
-        <div id="manage-models-modal" class="modal hidden">
-          <div class="modal-content">
-            <h2>Manage Models</h2>
-            <div class="add-model-container">
-              <input type="text" id="new-model-input" placeholder="New Model Name" />
-              <button id="btn-add-model" class="btn-primary">Add</button>
-            </div>
-            <ul id="model-list">
-              <!-- Model items injected here -->
-            </ul>
-            <div class="modal-actions">
-              <button id="btn-close-models">Close</button>
-            </div>
-          </div>
-        </div>
       </div>
-      <script type="module" src="/src/main.js"></script>
+    </div>
+  </div>
+  <script type="module" src="/src/main.js"></script>
 </body>
 
 </html>
