--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>llm_log</title>
+  <meta name="theme-color" content="#ffffff">
+  <link rel="manifest" href="/manifest.json">
+  <link rel="apple-touch-icon" href="/pwa-192x192.png">
+  <title>LLM Log</title>
+  <link rel="stylesheet" href="/src/style.css" />
 </head>
 
 <body>
@@ -26,7 +30,7 @@
         <div class="data-actions">
           <button id="btn-export" class="btn-sm">Export</button>
           <button id="btn-import" class="btn-sm">Import</button>
-          <button id="btn-manage-models" class="btn-sm">Models</button>
+          <button id="btn-manage-models" class="btn-sm btn-primary">Models</button>
           <input type="file" id="file-import" accept=".json" class="hidden" />
         </div>
       </div>
