feat: Add comment system with modal confirmation and legacy fixes

--- a/index.html
+++ b/index.html
@@ -74,6 +74,15 @@
           <div id="view-tags"></div>
         </div>
         <div id="view-content" class="markdown-body"></div>
+
+        <div class="comments-section">
+          <h3>Comments</h3>
+          <ul id="comments-list"></ul>
+          <div class="add-comment">
+            <textarea id="comment-input" placeholder="Add a comment..."></textarea>
+            <button id="btn-add-comment" class="btn-sm btn-primary">Add Comment</button>
+          </div>
+        </div>
       </div>
 
       <div id="models-view" class="hidden">
