feat: Polish UI with Dark Mode enhancements and UX improvements

--- a/index.html
+++ b/index.html
@@ -28,9 +28,10 @@
           </select>
         </div>
         <div class="data-actions">
+          <button id="btn-manage-models" class="btn-sm btn-primary">Models</button>
           <button id="btn-export" class="btn-sm">Export</button>
           <button id="btn-import" class="btn-sm">Import</button>
-          <button id="btn-manage-models" class="btn-sm btn-primary">Models</button>
+          <button id="btn-theme-toggle" class="btn-sm" title="Toggle Theme">🌙</button>
           <input type="file" id="file-import" accept=".json" class="hidden" />
         </div>
       </div>
